# gfxprim

./: .gitignore  CMakeLists.txt  GP.h  GP_backend.h  GP_clip_rect.h  GP_color.h  GP_colors.h  GP_common.h  GP_default_font.c  GP_font.h  GP_gfx.h  GP_line.h  GP_minmax.h  GP_pixel.h  GP_text.h  GP_text_metric.h  GP_textstyle.h  GP_writepixel.h  LICENSE  Makefile  README  README.md  TODO  app.mk  basic_colors.c  circle.c  clear.c  config.mk  configure  default_font.c  ellipse.c  font.c  gen.mk  getpixel.c  gfxprim_config.py  gp_run.sh  include.mk  install.mk  install.sh  lib.mk  (+12 more)
.github/workflows/: tests.yml
algo/: Circle.algo.c  Circle.algo.h  Ellipse.algo.c  FillCircle.algo.c  FillCircle.algo.h  FillEllipse.algo.c  FillEllipse.algo.h  FillTriangle.algo.c  FillTriangle.algo.h  HLine.algo.h  Line.algo.c  Line.algo.h  README  Text.algo.c  Text.algo.h  VLine.algo.h
backends/: GP_Backend_SDL.c  GP_backend_sdl.h
benchmark/: Makefile  results.html  run.sh
benchmark/engine/: Makefile  TestHtml.c  TestHtml.h  TestUtils.c  TestUtils.h
benchmark/line/: Makefile  line.c  run.sh
benchmark/triangle/: run.sh  triangle.c
core/: GP.h  GP_Abort.h  GP_Backend.c  GP_Backend.h  GP_Check.h  GP_Circle.c  GP_Circle.h  GP_Clip.h  GP_Color.c  GP_Color.h  GP_Common.h  GP_Context.c  GP_Context.h  GP_Counter.c  GP_Counter.h  GP_DefaultFont.c  GP_Ellipse.c  GP_Ellipse.h  GP_Fill.c  GP_Fill.h  GP_FillCircle.c  GP_FillCircle.h  GP_FillColumn.c  GP_FillColumn.h  GP_FillEllipse.c  GP_FillEllipse.h  GP_FillRect.c  GP_FillRect.h  GP_FillRow.c  GP_FillRow.h  GP_FillTetragon.c  GP_FillTetragon.h  GP_FillTriangle.c  GP_FillTriangle.h  GP_FnPerBpp.h  GP_Font.c  GP_Font.h  GP_GetPixel.c  GP_GetPixel.h  GP_HLine.c  (+93 more)
core/tests/: GP_Comon.test.c  GP_Counter.test.c  GP_Tests.h  GP_color_type_test.c  GP_font_save.c  GP_palette_test.c  GP_pixel_test.c  Makefile  common.test.c  core_tests.c  find_tests.py  font.test.c
debian/: README.Debian  changelog  control  copyright  libgfxprim-dev.install  libgfxprim-doc.install  libgfxprim1.dirs  libgfxprim1.install  libgfxprim1.symbols  rules  spiv.install  spiv.manpages  spiv.menu
demos/: Makefile
demos/automata/: Makefile  automata.c  automata.json
demos/bogoman/: .gitignore  Makefile  bogoman.c  bogoman_common.h  bogoman_debug.c  bogoman_debug.h  bogoman_loader.c  bogoman_loader.h  bogoman_map.c  bogoman_map.h  bogoman_render.c  bogoman_render.h  map.txt
demos/c_simple/: .gitignore  Makefile  SDL2_glue.c  SDL_glue.c  abort.c  backend_cursor.c  backend_custom_poll.c  backend_example.c  backend_input.c  backend_tasks.c  backend_tasks_example.c  backend_timers.c  backend_timers_example.c  bbox.c  blittest.c  byte_utils.c  convolution.c  d.c  data_storage.c  debug_handler.c  dpi_check.c  draw_glyph.c  drm_test.c  elf_note.c  fileview.c  filters_symmetry.c  fonttest.c  gaussian_noise.c  gfx_koch.c  input.c  input_example.c  json_writer.c  json_writer_file.c  koch.c  linetest.c  loaders.c  loaders_example.c  loaders_register.c  matrix.c  memory_io.c  (+25 more)
demos/fbshow/: Makefile  cpu_timer.c  fbshow.c  runtest.sh
demos/grinder/: .gitignore  Makefile  README  grinder.c  histogram.c  histogram.h  params.c  params.h  runtest.sh
demos/particle/: .gitignore  Makefile  particle_demo.c  space.c  space.h
demos/py_simple/: backends.py  blit.py  blur.py  cam_view.py  convolution.py  dither.py  font_style.py  gfx.py  gfxprim_qt.py  gravplots_AA.py  invert.py  loaders_example.py  plot.py  progress_callback.py  pygtk_example.py  resize.py  rotate90.py  runpytest.sh  showimage.py  sinplots_AA.py  x11_windows.py
demos/simple/: Makefile  backend_example.c
demos/spiv/: .gitignore  Makefile  cfg.c  cfg.h  cpu_timer.c  cpu_timer.h  image_actions.c  image_actions.h  image_cache.c  image_cache.h  image_list.c  image_list.h  image_loader.c  image_loader.h  spiv.1  spiv.c  spiv_config.c  spiv_config.h  spiv_help.c  spiv_help.h
demos/termini/: .gitignore  Makefile  termini.c
demos/ttf2img/: .gitignore  Makefile  ttf2img.c
demos/widgets/: .gitignore  Makefile  activity.c  choice.c  choice.json  choice_arr.c  choice_json_arr.c  choice_json_arr.json  clock.c  datetime.c  datetime.json  disable.c  disk_free.c  example.c  example.json  example2.c  example2.json  focus.c  (+28 more)
doc/: .gitignore  Doxyfile  Makefile  README  about.txt  api.txt  api_links.txt  asciidoc.conf  asciidoc.css  backends.txt  backends_api.txt  backends_display.txt  backends_display_waveshare_3_7.txt  backends_display_waveshare_7_5_v2.txt  backends_display_weact.txt  backends_gpio.txt  backends_init.txt  backends_python.txt  basic_types.txt  bbox.txt  blits.txt  block_alloc.txt  coding_style.txt  compilation.txt  context.txt  convert.txt  coordinate_system.txt  coordinates.mp  core.txt  core_common.txt  core_python.txt  debug.txt  dialog_msg.txt  doxygen-awesome-tabs.js  doxygen-custom-header.html  doxygen-custom.css  drawing_api.txt  environment_variables.txt  event_queue.txt  example_SDL2_glue.txt  (+105 more)
drivers/: GP_Framebuffer.c  GP_Framebuffer.h  Makefile
filters/: GP_Filters.h  GP_MirrorV.algo.h  GP_Rotate.algo.h  GP_Rotate.c  GP_Rotate.h  Makefile
generic/: circle_generic.c  ellipse_generic.c  fill_circle_generic.c  fill_ellipse_generic.c  fill_triangle_generic.c  hline_generic.c  line_generic.c  rect_generic.c  setpixel_generic.c  text_generic.c  triangle_generic.c  vline_generic.c
include/: GP.h  Makefile  config.h  gfxprim.h
input/: GP_Event.c  Makefile
libs/: Makefile
loaders/: GP_Loaders.h  GP_PBM.c  GP_PBM.h  GP_PGM.c  GP_PGM.h  GP_PXMCommon.c  GP_PXMCommon.h  Makefile
old_tests/: Makefile  ellipsetest.c  linefps.c  pixeltest.c  runtest.sh  shapetest.c  widelinetest.c
pylib/: Makefile  context.py  pixeltypes.py
rust/: .gitignore  Cargo.toml  build.rs  wrapper.h
templates/: line_tmpl.c
tests/: Makefile  circlefps.c  circlestest.c  circletest.c  ellipsetest.c  fonttest.c  linefps.c  linetest.c  pixeltest.c  randomshapetest.c  runtests.py  runtests.sh  shapetest.c  sierpinsky.c  solidcircletest.c  solidellipsetest.c  solidtriangletest.c  tests.mk  trianglefps.c  triangletest.c  widelinetest.c
(+1595 files in other folders)
